# safe-length

./: README.md  safe-length.cabal
example/: BrokenTuple.hs  GoodTuple.hs  List.hs  NestedList.hs  OldList.hs  Tuple.hs
src/Data/: Length.hs  SafeLength.hs
src/Safe/: Length.hs
tests/: Main.hs
